Added contact details

--- a/index.html
+++ b/index.html
@@ -649,17 +649,17 @@
                             <div class="card1 w-4/5 bg-[#BCED6D1A] my-4 p-4 h-[150px]">
                                 <img src="Images/Group 1171275317.png" alt="" class="w-12 h-12">
                                 <p class="family font-normal py-2 text-[#131318]">Phone Number</p>
-                                <h1 class="contact family text-black font-bold">01750060600</h1>
+                                <h1 class="contact family text-black font-bold">01837289986</h1>
                             </div>
                             <div class="card2 bg-[#FDDD5F1A] w-4/5  p-4 my-4 h-[150px]">
                                 <img src="Images/Group 1171275318.png" alt="" class="w-12 h-12">
                                 <p class="family font-normal py-2 text-[#131318]">Email</p>
-                                <h1 class="contact family text-black font-bold">saklain.sa@gmail.com</h1>
+                                <h1 class="contact family text-black font-bold">ashiqur12315@gmail.com</h1>
                             </div>
                             <div class="card3 w-4/5 bg-[#629CF31A] my-4  p-4 h-[150px]">
                                 <img src="Images/Group 1171275321.png" alt="" class="w-12 h-12">
                                 <p class="family font-normal py-2 text-[#131318]">Location</p>
-                                <h1 class="contact family text-black font-bold">Easter Housing, Mirpur 12</h1>
+                                <h1 class="contact family text-black font-bold">Avadi, Chennai, India</h1>
                             </div>
                     </div>
                     <div class="forText pt-4 lg:pt-0 w-full lg:w-2/3 h-[80%]">
@@ -727,11 +727,11 @@
                 </p>
                 <div class="family contactInfo pt-2 flex">
                     <div class="logo text-[#FF4240] mr-2"><i class="fa-solid fa-phone"></i></div>
-                    <div class="contact text-[#FFFFFFCC] text-base font-medium">01750060600</div>
+                    <div class="contact text-[#FFFFFFCC] text-base font-medium">01837289986</div>
                 </div>
                 <div class="family contactInfo flex">
                     <div class="logo text-[#FF4240] mr-2"><i class="fa-regular fa-envelope"></i></div>
-                    <div class="contact"><p class="contact text-[#FFFFFFCC] text-base font-medium">saklain.sa@gmail.com</p></div>
+                    <div class="contact"><p class="contact text-[#FFFFFFCC] text-base font-medium">ashiqur12315@gmail.com</p></div>
                 </div>
             </div>
             <div class="lg:w-[15%] text-center col-span-1 row-span-1 family flex flex-col">
