--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Live</title>
+    <title>Sports website</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,9 +11,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.min.css">
+
+    <script src="https://kit.fontawesome.com/f8c5331c10.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header> 
         <nav class="w-4/5 mx-auto h-20 mt-8 mb-4 navbar flex justify-between">
             <div class="navbar-start w-1/5">
                 <!-- responsive -->
